# vstu-scraping-rs

./: Cargo.toml
src/lib/: lib.rs
