[package]
name = "scraper"
version = "0.3.1"
authors = ["Dmitriy Kholkin <alukard.develop@gmail.com>"]
edition = "2018"

[[bin]]
name = "scraper"
path = "src/main.rs"

[lib]
name = "page_scraper"
path = "src/lib/lib.rs"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
chrono = "0.4.19"
dotenv = "0.15.0"
futures = "0.3.13"
indicatif = "0.15.0"
lazy_static = "1.4.0"
prettytable-rs = "0.8.0"
regex = "1.4.3"
reqwest = "0.11.0"
soup = "0.5.0"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-native-tls", "sqlite", "macros", "offline" ] }
tokio = { version = "1.1.0", features = [ "rt-multi-thread", "macros" ] }
